# reMarkable

./: .gitignore  README.md  pyproject.toml
data_exploration/: notebook.ipynb
datalake/curated_zone/products/2024/01/18/: products_20240118.json
datalake/curated_zone/products/2024/01/19/: products_20240119.json
datalake/curated_zone/products/year=2024/month=01/day=21/: products_20240121.json
datalake/landing_zone/products/2024/01/18/: products_20240118.json
datalake/landing_zone/products/2024/01/19/: products_20240119.json
datalake/landing_zone/products/year=2024/month=01/day=21/: products_20240121.json
src/: app.py  constants.py  tools.py
