[tool.poetry]
name = "remarkable"
version = "0.1.0"
description = "Project dependencies for technical case / Assignment 2"
authors = ["Tim Laser <t.laser88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
requests = "^2.31.0"
pandas = "2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
