[tool.poetry]
name = "remarkable"
version = "0.1.0"
description = "Project dependencies for technical case / Assignment 2"
authors = ["Tim Laser <t.laser88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
requests = "^2.31.0"
pandas = "2.1.4"
flake8 = "^7.0.0"
nose = "^1.3.7"
bandit = "^1.7.6"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
